--- a/src/app/Compartido/ingresar/ingresar.component.html
+++ b/src/app/Compartido/ingresar/ingresar.component.html
@@ -23,6 +23,12 @@
                 <button  class="boton-ingresar" mat-button [disabled]="form.invalid" >
                     Ingresar
                 </button>
+                <div *ngIf="this.mensajeRobot" >
+                    <ul  style="color:white; background-color: #FF6200;">
+                        <li>¡¡¡ {{mensajeRobot}} !!! </li>
+                    </ul>
+                </div>
+                
                 
             </div>     
         </form>
