--- a/src/app/empresas/publicar-empleo/publicar-empleo.component.html
+++ b/src/app/empresas/publicar-empleo/publicar-empleo.component.html
@@ -49,8 +49,14 @@
                 <button mat-button class="boton_publicar" [disabled]="form.invalid">
                     Publicar empleo
                 </button>
+                
             </div>
             
+            <div *ngIf="this.mensajeRobot" style="text-align: center;">
+                <ul  style="color:white; background-color: #FF6200; border-radius: 15px;">
+                    <li>¡¡¡ {{mensajeRobot}} !!! </li>
+                </ul>
+            </div>
 
         </form>
 
