--- a/src/app/postulantes/perfil-postulante/perfil-postulante.component.html
+++ b/src/app/postulantes/perfil-postulante/perfil-postulante.component.html
@@ -33,6 +33,11 @@
             </div>
         </div>
 
+        <div *ngIf="this.mensajeRobot" style="text-align: center;">
+            <ul  style="color:white; background-color: #FF6200; border-radius: 15px;">
+                <li>¡¡¡ {{mensajeRobot}} !!! </li>
+            </ul>
+        </div>
 
         <div class="perfil_form">
             <div fxLayout="column">
