--- a/src/app/Compartido/home/home.component.css
+++ b/src/app/Compartido/home/home.component.css
@@ -31,11 +31,13 @@
 .buscador-boton{
     background-color: #33bbd1;
     margin-left: 25%;
+    margin-top: 10px;
     margin-bottom: 10px;
-    width: 50%;
+    width: 100%;
     height: 70px;
     color: white;
     border-radius: 15px;
+    border:5px solid wheat;
 }
 
 .buscador-box-formulario{
@@ -45,7 +47,7 @@
   }
   
 .buscador-box-formulario-input {
-    width: 350px;
+    width: 700px;
   }
   .buscador-box-formulario-input2 {
     width: 350px;
