--- a/src/app/Compartido/home/home.component.html
+++ b/src/app/Compartido/home/home.component.html
@@ -14,7 +14,7 @@
                     <div fxLayoutAlign="row">
                     <div>
                         
-                        <mat-form-field class="buscador-box-formulario-input" appearance="fill" >
+                        <!-- <mat-form-field class="buscador-box-formulario-input" appearance="fill" >
                             <mat-label>Categoria</mat-label>
                             <mat-select formControlName="categoria" >
                               <mat-option *ngFor="let option of categorias" [value]="option.nombre">
@@ -22,11 +22,11 @@
                               </mat-option>
                             </mat-select>
                             
-                        </mat-form-field>
-                        <mat-form-field class="buscador-box-formulario-input" appearance="fill">
+                        </mat-form-field> -->
+                        <!-- <mat-form-field class="buscador-box-formulario-input" appearance="fill">
                             <mat-label>Empresa</mat-label>
                             <input matInput formControlName="nombre_empresa">
-                        </mat-form-field>
+                        </mat-form-field> -->
                     </div>
     
                     <div>
@@ -34,15 +34,15 @@
                             <mat-label>Palabra clave</mat-label>
                             <input matInput formControlName="palabraClave">
                         </mat-form-field>
-                        <button  class="buscador-boton" mat-button (click)="enviarFormulario(form.value)">
+                        <!-- <button  class="buscador-boton" mat-button (click)="enviarFormulario(form.value)">
                             Buscar
-                        </button>
+                        </button> -->
                     </div>
-                    <!-- <div>
+                    <div>
                         <button class="buscador-boton" mat-button (click)="enviarFormulario(form.value)">
                             Buscar
                         </button>
-                    </div> -->
+                    </div>
                     </div>
                 </form>
             </div>
