--- a/src/app/Compartido/detalle-empleo/detalle-empleo.component.html
+++ b/src/app/Compartido/detalle-empleo/detalle-empleo.component.html
@@ -42,17 +42,13 @@
 
     <div class="detalle-empleo-contenido">
         <span class="detalle-empleo-contenido-subtitulo">DESCRIPCION DEL EMPLEO:</span><br>
-        <p class="detalle-empleo-contenido-descripcion">
-            
-            {{detalle_empleo.descripcion}}
-        </p>
+        <pre class="detalle-empleo-contenido-descripcion">{{detalle_empleo.descripcion}}</pre>
+
         <span class="detalle-empleo-contenido-subtitulo">REQUISITOS DEL EMPLEO:</span><br>
-        <p class="detalle-empleo-contenido-descripcion">
-           
-            {{detalle_empleo.requisitos}}
-        </p>
+        <pre class="detalle-empleo-contenido-descripcion">{{detalle_empleo.requisitos}}</pre>
+
         <strong class="detalle-empleo-contenido-descripcion">Sector empresarial:</strong>
-        <p class="detalle-empleo-contenido-descripcion">{{empresa.sector}}</p>
+        <pre class="detalle-empleo-contenido-descripcion">{{empresa.sector}}</pre>
 
         <strong class="detalle-empleo-contenido-descripcion">Redes sociales y contacto:</strong><br>
         <p class="detalle-empleo-contenido-descripcion">
