--- a/src/app/Compartido/detalle-empleo/detalle-empleo.component.css
+++ b/src/app/Compartido/detalle-empleo/detalle-empleo.component.css
@@ -58,7 +58,12 @@
     color: white;
     font-size: 20px;
 }
-
+pre{
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+    
+}
 .detalle-empleo-boton{
     background-color: #33bbd1;
     margin-left: 10%;
