--- a/src/app/administrador/administrar-usuarios/administrar-usuarios.component.html
+++ b/src/app/administrador/administrar-usuarios/administrar-usuarios.component.html
@@ -29,7 +29,7 @@
                 <th mat-header-cell *matHeaderCellDef> Opciones </th>
                 <td mat-cell *matCellDef="let element"> 
                     <button *ngIf="element.rol != 'administrador' && element.rol != 'suspendido' " class="boton-opciones-baja" mat-button (click)="openDialogDarBaja(element.id)">Dar de baja usuario </button>
-                    <button *ngIf="element.rol != 'administrador'" class="boton-opciones" mat-button (click)="generarInforme(element.id,element.rol)">generar informe de usuario </button>
+                    <button *ngIf="element.rol != 'administrador'" class="boton-opciones" mat-button (click)="openDialogForm(element.id,element.rol)">generar informe de usuario </button>
                 </td>
             </ng-container>
         
